[package]
name = "brotlic"
version = "0.7.0"
edition = "2021"
authors = ["Aron Parker <hl3mukkel@gmail.com>", "The Brotli Authors"]
description = """
Bindings to the brotli library featuring a low-overhead encoder and decoder,
io::Write and io::Read wrappers for compression and decompression at customizable compression
qualities and window sizes.
"""
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/brotlic"
repository = "https://github.com/AronParker/brotlic"
keywords = ["brotli", "compression", "decompression"]
categories = ["compression", "api-bindings"]
readme = "README.md"

[dependencies]
brotlic-sys = { version = "0.2.0", path = "brotlic-sys" }

[dev-dependencies]
brotli = "3.3.4"
rand = "0.8.5"
criterion = "0.3.5"
rand_pcg = "0.3.1"
clap = "3.1.8"

[lib]
bench=false

[[bench]]
name = "compression"
harness = false

[workspace]
members = [ "brotlic-sys" ]
