[package]
name = "brotlic-sys"
version = "0.2.1"
edition = "2021"
authors = ["Aron Parker <hl3mukkel@gmail.com>"]
description = """
Sys crate to wrap the brotli library.
"""
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/brotlic/"
repository = "https://github.com/AronParker/brotlic"
keywords = ["brotli", "compression", "decompression"]
categories = ["compression", "api-bindings"]
readme = "README.md"

include = [
	"src/*",
	"brotli/c/enc/*",
	"brotli/c/dec/*",
	"brotli/c/common/*",
	"brotli/c/include/*",
	"Cargo.toml",
	"build.rs"
]

[lib]
doctest=false

[build-dependencies]
cc = "1.0"
